app/static/css/mybooks.css
.shelf-line {
    background-color: #544036;
    height: 20px;
    width: 100%;
}

.book-cover img {
    width: 100%;
    aspect-ratio: 2/3;
    border-radius: 10px;
    cursor: pointer;
    transition: transform 0.2s ease;
}

.book-cover-placeholder {
    width: 100%;
    aspect-ratio: 2/3;
    border-radius: 10px;
    cursor: pointer;
    transition: transform 0.2s ease;
    background-color: #768e784D;
    color: #3D2F2A80;
    font-size: 12px;
    padding: 10px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.book-cover:hover,
.book-cover-placeholder:hover {
  transform: translateY(-4px);
}

.current-page {
    font-weight: bold;
}

.progress {
    width: 100%;
    background-color: #E798974D;
}

.progress-bar {
    background-color: #E79897;
}

.modal-content {
    background-color: #f6efd8;
}

.modal-header {
    border-color: #3D2F2A4D;
}

.title,
.author {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

